--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 
 ext {
     com_android_version = '27.1.0'
+    com_google_version = '12.0.0'
 }
 
 dependencies {
@@ -53,6 +54,11 @@ dependencies {
     //support libraries
     implementation "com.android.support:appcompat-v7:$com_android_version"
     implementation "com.android.support:support-fragment:$com_android_version"
+
+    //firebase api
+    implementation "com.google.firebase:firebase-core:$com_google_version"
+    implementation "com.google.firebase:firebase-auth:$com_google_version"
+    implementation "com.google.firebase:firebase-firestore:$com_google_version"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
