--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.google.gms:google-services:3.2.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-
         classpath 'org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.16'
     }
 }
